--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-    <nav class="sidebar">
+    <nav class="sidebar close">
         <header>
             <div class="image-text">
                 <span class="image">
@@ -31,23 +31,53 @@
 
         <div class="menu-bar">
             <div class="menu">
-                <li class="nav-link">
-                    <a href="">
-                        <i class='bx bx-home' ></i>
-                        <span class="text nav-text">Home</span>
-                    </a>
-                </li>
                 <ul class="menu-links">
                     <li class="nav-link">
                         <a href="">
-                            <i class='bx bx-home' ></i>
-                            <span class="text nav-text">Home</span>
+                            <i class='bx bx-home-alt icon'></i>
+                            <span class="text nav-text">Início</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="">
+                            <i class='bx bx-wallet icon'></i>
+                            <span class="text nav-text">Carteira</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="">
+                            <i class='bx bx-bar-chart-alt-2 icon'></i>
+                            <span class="text nav-text">Análise geral</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="">
+                            <i class='bx bx-user icon'></i>
+                            <span class="text nav-text">Perfil</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="">
+                            <i class='bx bx-bell icon'></i>
+                            <span class="text nav-text">Notificações</span>
                         </a>
                     </li>
                 </ul>
             </div>
+
+            <div class="bottom-content">
+                <li class="">
+                    <a href="">
+                        <i class='bx bx-log-out icon'></i>
+                        <span class="text nav-text">Sair</span>
+                    </a>
+                </li>
+            </div>
+
         </div>
     </nav>
+
+    <script src="js/sidebar.js"></script>
 
 </body>
 </html>
