--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title>Home</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/estilo.css">
+
 
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     
+    <!-- ===== BARRA DE NAVEGAÇÃO ===== -->
+    div
     <nav class="sidebar close">
         <header>
             <div class="image-text">
@@ -76,8 +81,46 @@
 
         </div>
     </nav>
+    <!-- ===== FIM DA BARRA DE NAVEGAÇÃO ===== -->
+
+    <section class="conteudo">
+        <div class="container">
+            <div class="row">
+                <h1 class="display-4 fs-4 fw-bold">Boas-vindas, Eduardo</h1>
+            </div>
+            <div class="row mt-4">
+                <div class="col-4">
+                    <h5 class="display-4 fs-5">Saldo atual</h5>
+                    <h3 class="text-success">R$1700</h3>   
+                </div>
+                <div class="col-4 text-center">
+                    <i class='bx bx-dollar-circle fs-1 text-success'></i>    
+                    <span class="display-3 fs-4 m-2">Receita mensal</span>
+                    <button class="botao">
+                        <i class='bx bx-plus-circle fs-1 text-success'></i>
+                    </button>
+                    <h3 class="text-success">R$1700</h3>
+                </div>
+
+                <div class="col-1">
+                    <div class="vl m-auto"></div>
+                </div>
+
+                <div class="col-3 text-center">
+                    <i class='bx bxs-dollar-circle fs-1 text-danger'></i>    
+                    <span class="display-3 fs-4 m-2">Despesa mensal</span>
+                    <button class="botao">
+                        <i class='bx bx-minus-circle fs-1 text-danger'></i>
+                    </button>
+                    <h3 class="text-danger">R$-800</h3>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/sidebar.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+    
 </body>
 </html>
