--- a/public/index.html
+++ b/public/index.html
@@ -369,7 +369,7 @@
             </div>
             <!-- ==== FIM SEGUNDA ROW ===== -->
 
-            <div class="row w-90 b m-auto"><!-- ==== TERCEIRA ROW ===== -->
+            <div class="row w-90 my-5 m-auto"><!-- ==== TERCEIRA ROW ===== -->
                 <div class="col-6">
                     <h4>Contas a receber</h4>
                     <span class="d-block display-1 text-center fs-5 text-secondary my-3">Este mês</span>
@@ -430,7 +430,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-6 b2">
+                <div class="col-6">
 
                 </div>
             </div>
