Criando 'Balanço do mês' na index

--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
 
                     <div class="col-4">
                         <h4>Cartão de crédito</h4>
-                            <ul class="lista-itens px-2 secao-ul-cartoes">
+                            <ul class="lista-itens px-3 secao-ul-cartoes">
                                 <li class="item">
                                     <div class="col-1">
                                         <i class='bx bxl-paypal item-icon paypal'></i>
@@ -430,8 +430,29 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-6">
 
+                <div class="col-6 fs-6 balanco-mes">
+                    <h4>Balanço do mês</h4>
+                    <div class="row my-3">
+                        <span>
+                            Receita - <small>R$1700</small>
+                            <div class="balanco-porcentagem receita d-flex align-items-center justify-content-center">
+                                <small>75%</small>
+                            </div>
+                        </span>
+                    </div>
+                    <div class="row">
+                        <span>
+                            Despesa - <small>R$800</small>
+                            <div class="balanco-porcentagem despesa d-flex align-items-center justify-content-center">
+                                <small>25%</small>
+                            </div>
+                        </span>
+                    </div>
+                    <div class="row my-4">
+                        <h4 style="color: #666666;">Resultado:</h4>
+                        <span class="fs-4 text-success fw-light">R$900</span>
+                    </div>
                 </div>
             </div>
             <!-- ==== FIM TERCEIRA ROW ===== -->
