criando tela de lançamentos

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -337,7 +337,7 @@
                             <div class="col-6">
                                 <ul class="lista-itens px-2 secao-ul-cartoes">
                                     <li class="item">
-                                        <div class="col-3 ">
+                                        <div class="col-3 mr">
                                             <i class='bx bxs-cart item-icon mercado '></i>
                                         </div>
                                         <div class="col">
@@ -346,7 +346,7 @@
                                         </div>
                                     </li>
                                     <li class="item">
-                                        <div class="col-3 ">
+                                        <div class="col-3 mr">
                                             <i class='bx bxs-shopping-bags item-icon shopping'></i>
                                         </div>
                                         <div class="col">
