Finalizadno gráfico e tabela da pg Relatórios

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -39,21 +39,21 @@
             <div class="menu">
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="">
+                        <a href="#">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Início</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="">
+                        <a href="lancamentos.html">
                             <i class='bx bx-wallet icon'></i>
-                            <span class="text nav-text">Carteira</span>
+                            <span class="text nav-text">Lançamentos</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="">
+                        <a href="relatorios.html">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
-                            <span class="text nav-text">Análise geral</span>
+                            <span class="text nav-text">Relatórios</span>
                         </a>
                     </li>
                     <li class="nav-link">
@@ -491,7 +491,7 @@
                                     <div class="col-4">
                                         <div class="form-group">
                                             <label for="usuario">Data</label>
-                                            <input class="form-control" type="text" id="data">
+                                            <input class="form-control" type="date" id="data">
                                         </div>
                                     </div>
                                     <div class="col-4">
@@ -596,7 +596,7 @@
                                             </select>
                                         </div>
                                         <div class="col-4">
-                                            <label for="cvv">CVV</label>
+                                            <label for="cvv">Limite</label>
                                             <input class="form-control" type="text" id="cvv">
                                         </div>
                                     </div>
@@ -605,19 +605,50 @@
                                 <div class="row my-3">
                                     <div class="col-6">
                                         <div class="form-group">
-                                            <label for="usuario">Número do cartão</label>
-                                            <input class="form-control" type="text" id="num_cartao">
+                                            <label for="usuario">Data de fechamento</label>
+                                            <div class="row">
+                                                <div class="col-4 p-1">
+                                                    <select class="form-control" id="dia_fechamento">
+                                                        <option>01</option>
+                                                        <option>02</option>
+                                                        <option>03</option>
+                                                        <option>04</option>
+                                                        <option>...</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-8 p-1">
+                                                    <select class="form-control" id="mes_fechamento">
+                                                        <option>Janeiro</option>
+                                                        <option>Fevereiro</option>
+                                                        <option>Março</option>
+                                                        <option>Abril</option>
+                                                        <option>...</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-6">
                                         <div class="form-group">
                                             <label for="usuario">Data de vencimento</label>
                                             <div class="row">
-                                                <div class="col-4">
-                                                    <input class="form-control" type="text" id="mes_cartao">
+                                                <div class="col-4 p-1">
+                                                    <select class="form-control" id="dia_vencimento">
+                                                        <option>01</option>
+                                                        <option>02</option>
+                                                        <option>03</option>
+                                                        <option>04</option>
+                                                        <option>...</option>
+                                                    </select>
                                                 </div>
-                                                <div class="col-8">
-                                                    <input class="form-control" type="text" id="mes_cartao">
+                                                <div class="col-8 p-1">
+                                                    <select class="form-control" id="mes_vencimento">
+                                                        <option>Janeiro</option>
+                                                        <option>Fevereiro</option>
+                                                        <option>Março</option>
+                                                        <option>Abril</option>
+                                                        <option>...</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
