ajustando modal de Despesas/Receitas na Home

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -365,9 +365,9 @@
                         <div class="row">
                             <div class="col-6"></div>
                             <div class="col-6 my-3 text-center">
-                                <button class="btn btn-sm btn-secondary w-75">
+                                <a href="relatorios.html" class="btn btn-sm btn-secondary w-75">
                                     Relatório
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -605,9 +605,9 @@
                                 <div class="row my-3">
                                     <div class="col-6">
                                         <div class="form-group">
-                                            <label for="usuario">Data de fechamento</label>
+                                            <label for="usuario">Dia de fechamento</label>
                                             <div class="row">
-                                                <div class="col-4 p-1">
+                                                <div class="col p-1">
                                                     <select class="form-control" id="dia_fechamento">
                                                         <option>01</option>
                                                         <option>02</option>
@@ -615,24 +615,15 @@
                                                         <option>04</option>
                                                         <option>...</option>
                                                     </select>
-                                                </div>
-                                                <div class="col-8 p-1">
-                                                    <select class="form-control" id="mes_fechamento">
-                                                        <option>Janeiro</option>
-                                                        <option>Fevereiro</option>
-                                                        <option>Março</option>
-                                                        <option>Abril</option>
-                                                        <option>...</option>
-                                                    </select>
-                                                </div>
+                                                </div>                         
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-6">
                                         <div class="form-group">
-                                            <label for="usuario">Data de vencimento</label>
+                                            <label for="usuario">Dia de vencimento</label>
                                             <div class="row">
-                                                <div class="col-4 p-1">
+                                                <div class="col p-1">
                                                     <select class="form-control" id="dia_vencimento">
                                                         <option>01</option>
                                                         <option>02</option>
@@ -640,16 +631,7 @@
                                                         <option>04</option>
                                                         <option>...</option>
                                                     </select>
-                                                </div>
-                                                <div class="col-8 p-1">
-                                                    <select class="form-control" id="mes_vencimento">
-                                                        <option>Janeiro</option>
-                                                        <option>Fevereiro</option>
-                                                        <option>Março</option>
-                                                        <option>Abril</option>
-                                                        <option>...</option>
-                                                    </select>
-                                                </div>
+                                                </div>                           
                                             </div>
                                         </div>
                                     </div>
