--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -39,25 +39,25 @@
             <div class="menu">
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="">
+                        <a href="#">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Início</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="/lancamentos">
+                        <a href="lancamentos.html">
                             <i class='bx bx-wallet icon'></i>
                             <span class="text nav-text">Lançamentos</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="/relatorios">
+                        <a href="relatorios.html">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
                             <span class="text nav-text">Relatórios</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="/">
+                        <a href="">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Perfil</span>
                         </a>
