--- a/public/pages/relatorios.html
+++ b/public/pages/relatorios.html
@@ -23,67 +23,67 @@
 
     <!-- ===== BARRA DE NAVEGAÇÃO ===== -->
     <nav class="sidebar close">
-      <header>
-          <div class="image-text">
-              <span class="image">
-                  <img src="../imagens/logo.png" alt="logo">
-              </span>
+        <header>
+            <div class="image-text">
+                <span class="image">
+                    <img src="../imagens/logo.png" alt="logo">
+                </span>
 
-              <div class="text header-text">
-                  <span class="name">Eduardo Amaral</span>
-              </div>
-          </div>
+                <div class="text header-text">
+                    <span class="name">Eduardo Amaral</span>
+                </div>
+            </div>
 
-          <i class='bx bx-chevron-right toggle'></i>
-      </header>
+            <i class='bx bx-chevron-right toggle'></i>
+        </header>
 
-      <div class="menu-bar">
-          <div class="menu">
-              <ul class="menu-links">
-                  <li class="nav-link">
-                      <a href="/home">
-                          <i class='bx bx-home-alt icon'></i>
-                          <span class="text nav-text">Início</span>
-                      </a>
-                  </li>
-                  <li class="nav-link">
-                      <a href="/lancamentos">
-                          <i class='bx bx-wallet icon'></i>
-                          <span class="text nav-text">Lançamentos</span>
-                      </a>
-                  </li>
-                  <li class="nav-link">
-                      <a href="/relatorios">
-                          <i class='bx bx-bar-chart-alt-2 icon'></i>
-                          <span class="text nav-text">Relatórios</span>
-                      </a>
-                  </li>
-                  <li class="nav-link">
-                      <a href="/perfil">
-                          <i class='bx bx-user icon'></i>
-                          <span class="text nav-text">Perfil</span>
-                      </a>
-                  </li>
-                  <li class="nav-link">
-                      <a href="/notificacoes">
-                          <i class='bx bx-bell icon'></i>
-                          <span class="text nav-text">Notificações</span>
-                      </a>
-                  </li>
-              </ul>
-          </div>
+        <div class="menu-bar">
+            <div class="menu">
+                <ul class="menu-links">
+                    <li class="nav-link">
+                        <a href="home.html">
+                            <i class='bx bx-home-alt icon'></i>
+                            <span class="text nav-text">Início</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="lancamentos.html">
+                            <i class='bx bx-wallet icon'></i>
+                            <span class="text nav-text">Lançamentos</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-bar-chart-alt-2 icon'></i>
+                            <span class="text nav-text">Relatórios</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="">
+                            <i class='bx bx-user icon'></i>
+                            <span class="text nav-text">Perfil</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="">
+                            <i class='bx bx-bell icon'></i>
+                            <span class="text nav-text">Notificações</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
-          <div class="bottom-content">
-              <li class="">
-                  <a href="/auth/loggout">
-                      <i class='bx bx-log-out icon'></i>
-                      <span class="text nav-text">Sair</span>
-                  </a>
-              </li>
-          </div>
+            <div class="bottom-content">
+                <li class="">
+                    <a href="../index.html">
+                        <i class='bx bx-log-out icon'></i>
+                        <span class="text nav-text">Sair</span>
+                    </a>
+                </li>
+            </div>
 
-      </div>
-  </nav> <!-- ===== FIM BARRA DE NAVEGAÇÃO ===== -->
+        </div>
+    </nav> <!-- ===== FIM BARRA DE NAVEGAÇÃO ===== -->
 
     <!-- INÍCIO DO CONTEÚDO PRINCIPAL -->
     <section class="conteudo">
