Criando tela de perfil

--- a/public/pages/relatorios.html
+++ b/public/pages/relatorios.html
@@ -139,182 +139,182 @@
                         <tbody>
                           <tr>
                             <th scope="row">01/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">02/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">03/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">04/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">05/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">06/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">07/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">08/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">09/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">10/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">11/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">12/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">13/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">14/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">15/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">16/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">17/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">18/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">19/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">20/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">21/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">22/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">23/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">24/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">25/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">26/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">27/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">28/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">29/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                           <tr>
                             <th scope="row">30/01/2023</th>
-                            <td class="entrada">R$0,00</td>
-                            <td class="saida">R$0,00</td>
+                            <td class="text-success">R$0,00</td>
+                            <td class="text-danger">R$0,00</td>
                             <td>R$0,00</td>
                           </tr>
                         </tbody>
