--- a/public/pages/perfil.html
+++ b/public/pages/perfil.html
@@ -18,6 +18,7 @@
 
 <body>
 
+    <!-- ===== BARRA DE NAVEGAÇÃO ===== -->
     <nav class="sidebar close">
         <header>
             <div class="image-text">
@@ -26,7 +27,7 @@
                 </span>
 
                 <div class="text header-text">
-                    <span id="boasvindas1" class="name">Eduardo Amaral</span>
+                    <span class="name">Eduardo Amaral</span>
                 </div>
             </div>
 
@@ -37,31 +38,31 @@
             <div class="menu">
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="/home">
+                        <a href="home.html">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Início</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="/lancamentos">
+                        <a href="#">
                             <i class='bx bx-wallet icon'></i>
                             <span class="text nav-text">Lançamentos</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="/relatorios">
+                        <a href="relatorios.html">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
                             <span class="text nav-text">Relatórios</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="/perfil">
+                        <a href="">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Perfil</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="/notificacoes">
+                        <a href="">
                             <i class='bx bx-bell icon'></i>
                             <span class="text nav-text">Notificações</span>
                         </a>
@@ -71,7 +72,7 @@
 
             <div class="bottom-content">
                 <li class="">
-                    <a href="/auth/loggout">
+                    <a href="../index.html">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Sair</span>
                     </a>
@@ -85,7 +86,7 @@
     <section class="conteudo">
         <div class="container my-5">
             <div class="row">
-                <h1 class="display-4 fs-3 fw-bold">Olá <span id="boasvindas2" ></span></h1>
+                <h1 class="display-4 fs-3 fw-bold">Olá Usuário</h1>
             </div>
             <div class="row mt-4">
                 <div class="col-2 d-flex justify-content-center">
@@ -93,7 +94,7 @@
                 </div>
                 <div class="col-10 d-flex align-items-center">
                     <div class="row">
-                        <h2 id="boasvindas3" class="fw-light">Eduardo Amaral</h2>
+                        <h2 class="fw-light">Eduardo Amaral</h2>
                         <h6 class="fw-bold">Endereço: <span>Avenida Legosil, n 243</span></h6>
                         <h6 class="fw-bold">Cidade: <span>Legolândia</span></h6>
                     </div>
@@ -149,25 +150,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script>
-        fetch("/auth/profile", { method: "get" })
-            .then(response => response.text())
-            .then(data => {
-                user = JSON.parse(data);
-                console.log(user);
-                const ids = ["boasvindas1", "boasvindas2", "boasvindas3"];
-
-                ids.forEach(id => {
-                    const element = document.getElementById(id);
-                    if (element) {
-                        element.innerText = `${user.username}`;
-                    }
-                });
-            })
-            .catch(error => {
-                console.log("Ocorreu um erro:", error);
-            });
-    </script>
 </body>
 
 </html>
